--- a/dom_u_gnoma/templates/users/login.html
+++ b/dom_u_gnoma/templates/users/login.html
@@ -61,7 +61,7 @@
             </button>
             <!-- Тест на внимательность. Без переопределения шаблона этого адреса
             не существует. Нужно что-то делать, иначе все упадет -->
-            <a href="{% url 'users:password_reset_form' %}" class="btn btn-link">
+            {% comment %} <a href="{% url 'users:password_reset_form' %}" class="btn btn-link"> {% endcomment %}
               Забыли пароль?
             </a>
           </div>
