--- a/dom_u_gnoma/templates/about/index.html
+++ b/dom_u_gnoma/templates/about/index.html
@@ -1,9 +1,6 @@
 {% extends "base.html" %}
-{% block title %}О сайте{% endblock %}
+{% block title %}О сайте{% endblock title %}
 {% block content %}
   <h1>Главная страница</h1>
   контента нет пока
-  {% if not user.is_authenticated %}
-    <a href="{% url 'users:signup' %}">Зарегистрироваться</a>
-  {% endif %}
 {% endblock content %}
