Add password reset and password change, little fixes in templates.

--- a/dom_u_gnoma/templates/users/password_change_done.html
+++ b/dom_u_gnoma/templates/users/password_change_done.html
@@ -1,20 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Пароль изменён{% endblock %}
+{% block title %}Пароль изменён{% endblock title %}
 {% block content %}
-{% load user_filters %}
-  <div class="container py-5"> 
-    <div class="row justify-content-center">
-      <div class="col-md-8 p-5">
-        <div class="card">
-          <div class="card-header">
-            Пароль изменён
-          </div>
-          <div class="card-body"> 
-            <p>Пароль изменён успешно</p>
-            <a href="{% url 'users:login' %}">Войти</a>
-          </div> <!-- card body -->
-        </div> <!-- card -->
-      </div> <!-- col -->
-    </div> <!-- row -->
-  </div>
-{% endblock %} 
+  <h3>Пароль изменён</h3>
+  <p>Пароль изменён успешно</p>
+  <a href="{% url 'users:login' %}">
+    {% if user.is_authenticated %}
+      Главная страница
+    {% else %}
+      Войти
+    {% endif %}</a>
+{% endblock content %}
