--- a/dom_u_gnoma/templates/users/logged_out.html
+++ b/dom_u_gnoma/templates/users/logged_out.html
@@ -1,15 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}Вы вышли из системы{% endblock %}
+{% block title %}Вы вышли из системы{% endblock title %}
 {% block content %}
-<div class="container py-5"> 
-  <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="card">
-        <div class="card-header">Выход</div>
-        <div class="card-body"> <p>Вы вышли из своей учётной записи. Ждём вас снова!</p>
-        </div> <!-- card body -->
-      </div> <!-- card -->
-    </div> <!-- col -->
-  </div> <!-- row --> 
-</div>
+<h1>Выход</h1>
+<h3>Вы вышли из своей учётной записи. Ждём вас снова!</h3>
 {% endblock %}
