--- a/dom_u_gnoma/templates/users/password_reset_done.html
+++ b/dom_u_gnoma/templates/users/password_reset_done.html
@@ -1,19 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Сброс пароля прошёл успешно{% endblock %}
+{% block title %}Сброс пароля прошёл успешно{% endblock title %}
 {% block content %}
-{% load user_filters %}
-  <div class="container py-5"> 
-    <div class="row justify-content-center">
-      <div class="col-md-8 p-5">
-        <div class="card">
-          <div class="card-header">
-            Отправлено письмо
-          </div>
-          <div class="card-body">
-            <p>Проверьте свою почту, вам должно прийти письмо со ссылкой для восстановления пароля</p>
-          </div> 
-        </div> 
-      </div>
-    </div> 
-  </div>
-{% endblock %} 
+  <h3>Отправлено письмо</h3>
+  <p>Проверьте свою почту, вам должно прийти письмо со ссылкой для восстановления пароля</p>
+{% endblock content %} 
