--- a/dom_u_gnoma/templates/includes/header.html
+++ b/dom_u_gnoma/templates/includes/header.html
@@ -1,4 +1,7 @@
 Здесь будет логотип, менюха и т.д.
+<a href={% url "about:index" %}>Главная</a>
+<a href={% url "items:catalog" %}>Каталог</a>
+<a href={% url "cart:items" %}>Корзина</a>
 {% if not user.is_authenticated %}
   <a href={% url "users:signup" %}>Зарегистрироваться</a>
   <a href={% url "users:login" %}>Войти</a>
