--- a/dom_u_gnoma/templates/base.html
+++ b/dom_u_gnoma/templates/base.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}"> 
     <title>
       {% block title %}
         Нет титула
@@ -22,7 +18,7 @@
         Контент не подвезли :(
       {% endblock content %}
     </main>
-    <footer class="border-top text-center py-3">
+    <footer>
       {% include "includes/footer.html" %}   
     </footer>
   </body>
