--- a/dom_u_gnoma/templates/cart/items.html
+++ b/dom_u_gnoma/templates/cart/items.html
@@ -30,7 +30,7 @@
       </div>
       <div class="col">
         {% if user.is_authenticated %}
-          <a href="">Оформить заказ</a><br>
+          <a href={% url "orders:order_create" %}>Оформить заказ</a><br>
         {% else %}
           <a href={% url "users:login" %}>Войти</a>
         {% endif %}
